tests/test_keyword_hint.expected
Error: Unknown keyword 'list' at line 1
  1 | list [1,2,3] -> emt
      ^
  Hint: Did you mean 'lst'?
